force-app/main/default/objects/PartnerFundRequest/fields/Activity_Date_Period__c.field-meta.xml
<CustomField>
    <fullName>Activity_Date_Period__c</fullName>
    <label>Activity Date/Period</label>
    <type>Date</type>
</CustomField>