force-app/main/default/objects/PartnerFundRequest/fields/Attendees_Demographics__c.field-meta.xml
<CustomField>
    <fullName>Attendees_Demographics__c</fullName>
    <label>Attendees Demographics</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>