force-app/main/default/objects/PartnerFundRequest/fields/Description_of_Participation_tabletop_b__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Participation_tabletop_b__c</fullName>
    <label>Description of Participation (tabletop/b</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>