force-app/main/default/objects/PartnerFundRequest/fields/Jelco_1200__c.field-meta.xml
<CustomField>
    <fullName>Jelco_1200__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jelco ($1200)</label>
    <type>Checkbox</type>
</CustomField>