force-app/main/default/objects/PartnerFundRequest/fields/Objective_what_are_you_hoping_to_achiev__c.field-meta.xml
<CustomField>
    <fullName>Objective_what_are_you_hoping_to_achiev__c</fullName>
    <label>Objective (what are you hoping to achiev</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>