force-app/main/default/objects/PartnerFundRequest/fields/Product_give_away__c.field-meta.xml
<CustomField>
    <fullName>Product_give_away__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product give-away</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Partner Fund Requests</relationshipLabel>
    <relationshipName>Partner_Fund_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>