force-app/main/default/objects/PartnerFundRequest/fields/Product_Solution_focus__c.field-meta.xml
<CustomField>
    <fullName>Product_Solution_focus__c</fullName>
    <label>Product/Solution focus</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>