force-app/main/default/objects/PartnerFundRequest/fields/Show_Specials_Post_Event_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Show_Specials_Post_Event_Follow_Up__c</fullName>
    <label>Show Specials/Post Event Follow Up:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>