force-app/main/default/objects/PartnerFundRequest/fields/X2020_POS_Goal__c.field-meta.xml
<CustomField>
    <fullName>X2020_POS_Goal__c</fullName>
    <label>2020 POS Goal</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>